using NB.Model.Entities;

namespace NB.Service.SupplierService.Dto
{
    public class SupplierDto : Supplier
    {
    }
}
